# mavsim_public

./: README.md  pyproject.toml
mavsim_python/controllers/: autopilot.py
mavsim_python/estimators/: geolocation.py
mavsim_python/launch_files/chap03/: chap3_check.py  mavsim_chap3.py
mavsim_python/launch_files/chap04/: mavsim_chap4.py
mavsim_python/launch_files/chap05/: mavsim_chap5.py  model_coef.py  scipy_example.py
mavsim_python/launch_files/chap06/: mavsim_chap6.py
mavsim_python/launch_files/chap13/: mavsim_chap13_orbit_target.py
mavsim_python/models/: camera.py  compute_models.py  gimbal.py  mav_dynamics.py  mav_dynamics_control.py  trim.py  wind_simulation.py
mavsim_python/parameters/: control_parameters.py
mavsim_python/viewers/: draw_mav.py  geolocation_viewer.py
